--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -1,11 +1,20 @@
 - title: Getting Started
   docs:
   - home
-  - come-funziona
-  - connettore
-  - dropbox
-  - appmanager
   - installazione
+  - come-funziona
+  - dropbox
+  - connettore
+
+- title: Integrazione
+  docs:
+  - creare-un-connettore
+  - export-specifiche-files
+  - export-dati
+  - export-catalogo
+  - export-report
+  - import-dati
+  - import-dati-ws
 
 - title: License Manager
   docs:
@@ -23,25 +32,11 @@
   - plugins
   - extras
 
-- title: Deployment
+- title: Reports
   docs:
-  - github-pages
-  - deployment-methods
-  - continuous-integration
-
-- title: Miscellaneous
-  docs:
-  - troubleshooting
-  - sites
-  - resources
-  - upgrading
-
-- title: Meta
-  docs:
-  - contributing
-  - history
-  - variables
-  - collections
-  - datafiles
-  - assets
-  - migrations
+  - rpt-funzionamento
+  - rpt-ordini-salvati
+  - rpt-ordini-inviati
+  - rpt-ordini-veloci
+  - rpt-copia-commissione
+  - rpt-incassi
