--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 markdown: kramdown
 highlighter: pygments
 permalink: /news/:year/:month/:day/:title/
-baseurl: /ic
+baseurl: 
 excerpt_separator: ""
 
 gauges_id: 503c5af6613f5d0f19000027
