rimosso menu profilazione

--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -22,7 +22,7 @@
   - par-lm
   - par-funzionali
   - par-visualizzazione
-  - par-profilazione
+# - par-profilazione
 
 #- title: App Manager
 #  docs:
