--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -20,8 +20,8 @@
   docs:
   - license-manager
   - par-lm
-  - par-funzionali
-  - par-visualizzazione
+  - par-progetto
+  - par-utente
 # - par-profilazione
 
 #- title: App Manager
