--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 markdown: kramdown
 highlighter: pygments
 permalink: /news/:year/:month/:day/:title/
-url: http://ic.apexnet.it
+#url: http://ic.apexnet.it
 baseurl:
 excerpt_separator: ""
 
-gauges_id: 503c5af6613f5d0f19000027
+#gauges_id: 503c5af6613f5d0f19000027
 google_analytics_id: UA-50755011-1
 
 repository: https://github.com/Apex-net/icommerce-site
