--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -40,6 +40,7 @@
   - creare-un-connettore
   - export-specifiche-files
   - export-dati
+  - export-dati-minimi
   - export-catalogo
   - import-dati
   - import-dati-ws
