--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 markdown: kramdown
 highlighter: pygments
 permalink: /news/:year/:month/:day/:title/
-#url: http://ic.apexnet.it
+#url: http://ic.wedoit.io
 baseurl:
 excerpt_separator: ""
 
 #gauges_id: 503c5af6613f5d0f19000027
 google_analytics_id: UA-20354938-22
 
-repository: https://github.com/Apex-net/icommerce-site
-help_url: https://github.com/Apex-net/icommerce-site
+repository: https://github.com/wedoit-io/commerce-site
+help_url: https://github.com/wedoit-io/icommerce-site
 
 collections:
   docs:
